re PR fortran/36534 (Bogus: '__convert_s1_s4' at (1) is obsolescent in fortran 95)

PR fortran/36534

	* resolve.c (resolve_fl_procedure): Clean up obsolescence warning.
	* gfortran.dg/widechar_10.f90: New test.

From-SVN: r215887